# paper-scraper

./: .gitignore  .rules  AGENTS.md  README.md  extracted_references.json  my_question.txt  my_system_prompt.txt  opencode.json  pixi.toml  pyproject.toml
.agents/skills/lele-import/: SKILL.md
.github/workflows/: test-3.11.yml  test-3.12.yml  test-3.13.yml  test-3.14.yml
.unisi/: 02_pull_repo.sh  03_pull_gemma_model.sh  03_pull_gemma_models.sh  04_run_scripts.sh  install_pixi.sh  pull_repo.sh
.zed/: global_keymaps.json  global_settings.json  settings.json  tasks.json
OUTPUT_DIR/: extracted_references.json
OUTPUT_DIR/QUESTIONS/: q1.md
OUTPUT_DIR/RESPONSES/2‐Oxazoline‐Based Polymer for Pharmaceutical Products Adsorption in Aqueous/: q1.md
OUTPUT_DIR/RESPONSES/Impact_of_Estrogens_Present_in_Environment_on_Health_and_Welfare_of_Animals/: q1.md
PAPERS/: download_config.toml
QUESTIONS/: q1.md
RESPONSES/test_question/: paper_skipped.txt
RESPONSES/test_single_paper/: 2‐Oxazoline‐Based Polymer for Pharmaceutical Products Adsorption in Aqueous.md
gemma4_26b-pdf2image-respones/RESPONSES/Impact_of_Estrogens_Present_in_Environment_on_Health_and_Welfare_of_Animals/: q1.md
gemma4_26b-pdf2text-respones/QUESTIONS/: q1.md
paper_scraper/: __global__.py  __init__.py  conftest.py  download_papers.py  extract_refs.py  get_openalex_topics_codes.py  main.py
paper_scraper/Error/: GrobidConnection.py  GrobidConnectionRefused.py  GrobidConnectionTimeout.py  GrobidError.py  GrobidUnexpectedStatus.py  OllamaConnectionRefused.py  OllamaConnectionTimeout.py
paper_scraper/Grobid/: check_connection.py  extract_references_from_pdf.py
paper_scraper/Grobid/Error/: ConnectionRefused.py  ConnectionTimeout.py  UnexpectedStatus.py
paper_scraper/Ollama/: AnalysisResult.py  BatchResult.py  Options.py  PaperResponse.py  QuestionResponse.py  __global__.py  __init__.py  answer_question_for_paper.py  call_ollama.py  check_connection.py  chunk_text.py  complete.py  convert_pdf_to_images.py  generate_response.py  get_handle_pdf_function.py  read_pdf.py
paper_scraper/Ollama/Error/: ConnectionRefused.py  ConnectionTimeout.py
paper_scraper/OpenAlex/: Options.py  Result.py  download_paper_from_doi.py  download_papers_from_dois.py  download_papers_with_filter.py  download_reference_papers.py  get_dois_from_filter.py  get_reference_dois.py
paper_scraper/Secrets/: get_pyalex_api_key.py
paper_scraper/Utils/: convert_pdf_to_images.py  delete_all_downloaded_papers.py  extract_dois_from_json.py  extract_text_from_pdf.py
paper_scraper/pipeline/: analyze.py  download_papers.py  extract_refs.py  get_dois.py
(+5 files in other folders)
