# pyproject.toml
[project]
name = "paper_scraper"
version = "0.0.1"
authors = [
  { name="Lele", email="maggiori.samuele@gmail.com" },
]
description = "todo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["python-dotenv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [scripts]
# cacca_train = "bio.cacca_train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
python_files = "*.py"
testpaths = ["paper_scraper"]
norecursedirs = [
  "__pycache__",
  ".cache_dir",
  ".pytest_cache",
  ".git",
  ".zed",
  ".vscode",
  "__HELPER_DIR__",
]
filterwarnings = [
    "ignore:Concepts is deprecated:DeprecationWarning",
    "ignore:Concept is deprecated:DeprecationWarning",
]
markers = [
    "verbose: tests that have some kind of output",
    "todo: test yet to implement",
    "above10s: test that require more than 10 seconds",
    "unreliable: test that depends on external factors, in the future it will fail",
    "infinite: test will not finish",
    "requires_grobid: test requires Grobid running on localhost:8070",
    "requires_ollama: test requires Ollama running on localhost:11434",
]
addopts = "-m 'not verbose and not todo and not above10s and not unreliable and not infinite and not requires_grobid and not requires_ollama'"
